--- a/src/css/scss/_const.scss
+++ b/src/css/scss/_const.scss
@@ -1,10 +1,11 @@
 $img: "src/img";
 
-$bg_color: #253746;
+$bg_color: #142635;
 
 $color: #fff;
-$cDark: #142635;
+$cDark: #253746;
 $cBlue: #00A3E0;
+$cLightBlue: #9ED4D6;
 $cYellow: #EADA24;
 
 $font-family: 'Alright Sans Regular', Helvetica, sans-serif;
@@ -13,7 +14,7 @@ $font-size: 24px;
 $font-size__small: 18px;
 
 $max-width: 1460px;
-$indent: 40px;
+$indent: 30px;
 
 // easings
 $easeOutCirc: cubic-bezier(.07, .82, .17, 1);
