--- a/src/css/scss/form-elements/_checkbox.scss
+++ b/src/css/scss/form-elements/_checkbox.scss
@@ -37,10 +37,10 @@ input[type="checkbox"] {
         }
     }
     &:checked + label {
-        color: $cRed;
+        color: $cYellow;
 
         &::before {
-            border-color: $cRed;
+            border-color: $cYellow;
         }
         &::after {
             opacity: 1;
