--- a/src/css/scss/layout/_footer.scss
+++ b/src/css/scss/layout/_footer.scss
@@ -95,7 +95,7 @@
         margin: 0 0 18px;
 
         &:hover {
-            color: $cRed;
+            color: $cYellow;
         }
     }
     &_menu-big-link {
@@ -108,7 +108,7 @@
         align-items: center;
 
         &:hover {
-            color: $cRed;
+            color: $cYellow;
         }
     }
     &_menu-icon-wrapper {
