--- a/src/css/scss/layout/_header.scss
+++ b/src/css/scss/layout/_header.scss
@@ -1,197 +1,18 @@
 .header {
-    background-color: #fff;
-    position: sticky;
+    position: absolute;
     top: 0;
+    left: 0;
+    right: 0;
+    padding: 30px 0 0;
     z-index: 1;
-
-    &.popup-opened,
-    .mobile-menu-opened & {
-        z-index: 11;
+    @include tablet {
+        padding-top: 80px;
     }
 
-    &_top {
+    &_holder {
         @include layout;
-        padding: 20px 0;
         display: flex;
-        align-items: center;
         justify-content: space-between;
-        @include desktop {
-            padding-left: $indent;
-            padding-right: $indent;
-        }
-    }
-    &_top-content {
-        display: flex;
         align-items: center;
-        justify-content: flex-end;
-    }
-    &_additional-content {
-        display: none;
-        position: fixed;
-        box-sizing: border-box;
-        left: 0;
-        top: 0;
-        background: #fff;
-        z-index: 3;
-        flex-direction: column;
-        padding: 28px 15px 0;
-        overflow: auto;
-        max-height: 100vh;
-        border-radius: 0 0 6px 0;
-        width: 95vw;
-        max-width: 370px;
-        @include desktop {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: flex-end;
-            position: static;
-            padding: 0;
-            max-width: none;
-            width: auto;
-        }
-
-        &.opened {
-            display: flex;
-            z-index: 11;
-        }
-    }
-    &_additional-content-logo {
-        font-size: 24px;
-        line-height: 24px;
-        font-weight: bold;
-        display: block;
-        margin: 0 0 25px;
-        position: relative;
-        @include desktop {
-            display: none;
-        }
-    }
-    &_additional-content-close {
-        position: absolute;
-        right: 0;
-        top: 0;
-        height: 100%;
-        width: 36px;
-        padding: 0;
-        background: url(#{$img}/close.svg) no-repeat center / 12px 12px;
-
-    }
-    &_mobile-menu {
-        @include desktop {
-            display: none;
-        }
-    }
-    &_mobile-menu-link {
-        display: block;
-        font-weight: bold;
-        font-size: 18px;
-        line-height: 21px;
-        color: $color;
-        margin: 30px 0;
-    }
-    &_logo {
-        background: url(#{$img}/logo.svg) no-repeat center / auto 90%;
-        width: 190px;
-        height: 45px;
-        color: $color;
-        font-size: 12px;
-        line-height: 1;
-        display: flex;
-        align-items: flex-end;
-        position: relative;
-        @include tablet {
-            margin: -10px 18px 0;
-            height: 55px;
-            background-position: left top;
-        }
-        @include desktop {
-            height: 65px;
-            margin: -10px 0 0;
-        }
-    }
-    &_logo-text {
-        position: absolute;
-        left: 0;
-        top: 100%;
-        display: none;
-        color: #8F8F8F;
-        @include tablet {
-            display: block;
-        }
-    }
-    &_column {
-        @include tablet {
-            border-left: 1px solid $cGrey;
-        }
-        @include desktop {
-            padding: 0 16px;
-            margin: 0;
-        }
-
-        &:first-of-type {
-            border-left: none;
-        }
-
-        &__mobile {
-            display: block;
-        }
-        &__tablet {
-            @include tablet {
-                display: block;
-            }
-        }
-    }
-    &_info {
-        background: $cLight;
-        margin: 0 -15px;
-        padding: 10px 15px 10px 57px;
-        position: relative;
-        @include desktop {
-            background-color: transparent;
-            margin: 0;
-            padding: 0 0 0 42px;
-        }
-    }
-    &_info-icon {
-        position: absolute;
-        top: 15px;
-        left: 15px;
-        background-size: 100% 100%;
-        background-repeat: no-repeat;
-        background-position: center;
-        @include desktop {
-            top: 5px;
-            left: 0;
-        }
-
-        &__clock {
-            background-image: url(#{$img}/clock.svg);
-            width: 30px;
-            height: 30px;
-        }
-        &__phone {
-            background-image: url(#{$img}/phone.svg);
-            width: 24px;
-            height: 24px;
-            top: 18px;
-            @include desktop {
-                top: 8px;
-            }
-        }
-    }
-    &_info-title {
-        color: #8F8F8F;
-        display: block;
-        margin: 0 0 6px;
-        font-size: 16px;
-        line-height: 18px;
-    }
-    &_info-value {
-        font-weight: bold;
-        font-size: 16px;
-        line-height: 16px;
-        color: $color;
-        white-space: nowrap;
     }
 }
