--- a/src/css/scss/basic/_fonts.scss
+++ b/src/css/scss/basic/_fonts.scss
@@ -2,7 +2,15 @@
     font-family: 'Alright Sans Regular';
     src: url('src/fonts/Alright-Sans-Regular.woff2') format('woff2'),
         url('src/fonts/Alright-Sans-Regular.woff') format('woff');
-    font-weight: 900;
-    font-style: italic;
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+@font-face {
+    font-family: 'Alright Sans Regular';
+    src: url('src/fonts/Alright-Sans-Bold.woff2') format('woff2'),
+        url('src/fonts/Alright-Sans-Bold.woff') format('woff');
+    font-weight: 700;
+    font-style: normal;
     font-display: swap;
 }
