--- a/src/css/scss/layout/_headings.scss
+++ b/src/css/scss/layout/_headings.scss
@@ -10,20 +10,18 @@
 }
 %heading-2 {
     font-size: 18px;
-    line-height: 22px;
-    font-weight: normal;
-    margin: 0 0 20px;
+    line-height: 32px;
+    font-weight: 400;
+    margin: 50px 0;
     text-transform: uppercase;
     @include tablet {
-        line-height: 43px;
-        font-size: 32px;
-    }
-    @include desktop {
-        font-size: 36px;
+        margin: 150px 0;
+        font-size: 30px;
+        line-height: 52px;
     }
 }
 %heading-3 {
-    font-weight: bold;
+    font-weight: 400;
     font-size: 18px;
     line-height: 1.2;
     margin: 32px 0 16px;
