--- a/src/css/scss/form-elements/_button.scss
+++ b/src/css/scss/form-elements/_button.scss
@@ -5,7 +5,7 @@
     border: none;
     cursor: pointer;
     color: $cDark;
-    font-weight: bold;
+    font-weight: 900;
     font-size: 14px;
     height: 41px;
     line-height: 41px;
@@ -19,7 +19,7 @@
         font-size: 20px;
         height: 74px;
         line-height: 74px;
-        padding: 0 15px;
+        padding: 0 35px;
     }
 
     &:active {
