--- a/src/css/scss/other/_showcase.scss
+++ b/src/css/scss/other/_showcase.scss
@@ -8,7 +8,7 @@
         top: 120px;
         font-size: 18px;
         line-height: 26px;
-        font-weight: bold;
+        font-weight: 900;
         max-width: 600px;
         text-align: center;
         left: $indent;
