--- a/src/css/scss/basic/_fonts.scss
+++ b/src/css/scss/basic/_fonts.scss
@@ -8,9 +8,18 @@
 }
 @font-face {
     font-family: 'Alright Sans Regular';
-    src: url('src/fonts/Alright-Sans-Bold.woff2') format('woff2'),
-        url('src/fonts/Alright-Sans-Bold.woff') format('woff');
-    font-weight: 700;
+    src: url('src/fonts/Alright-Sans-Black.woff2') format('woff2'),
+        url('src/fonts/Alright-Sans-Black.woff') format('woff');
+    font-weight: 900;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Miller';
+    src: url('src/fonts/Miller-Text.woff2') format('woff2'),
+        url('src/fonts/Miller-Text.woff') format('woff');
+    font-weight: 900;
     font-style: normal;
     font-display: swap;
 }
