--- a/src/css/scss/form-elements/_checkbox.scss
+++ b/src/css/scss/form-elements/_checkbox.scss
@@ -4,9 +4,12 @@ input[type="checkbox"] {
     z-index: -1;
 
     & + label:not([class]) {
+        text-align: left;
         cursor: pointer;
-        display: inline-block;
-        padding: 0 0 0 36px;
+        padding: 0 0 0 26px;
+        max-width: 450px;
+        font-size: 12px;
+        line-height: 18px;
         min-height: 20px;
         position: relative;
         margin: 0;
@@ -14,10 +17,9 @@ input[type="checkbox"] {
 
         &::before {
             content: '';
-            border: 1px solid #8F8F8F;
-            border-radius: 3px;
-            height: 15px;
-            width: 15px;
+            border: 1px solid $color;
+            height: 10px;
+            width: 10px;
             position: absolute;
             top: 1px;
             left: 0;
@@ -25,26 +27,19 @@ input[type="checkbox"] {
         }
         &::after {
             content: '';
-            background: url(#{$img}/check.svg) no-repeat center / 100% 100%;
-            width: 18px;
-            height: 12px;
+            background: $color;
+            width: 11px;
+            height: 11px;
             position: absolute;
             top: 1px;
-            left: 4px;
+            left: 0;
             opacity: 0;
-            transform: scale(.6);
-            transition: .1s $easing opacity, .1s $easing transform;
+            transition: .1s $easing opacity;
         }
     }
     &:checked + label {
-        color: $cYellow;
-
-        &::before {
-            border-color: $cYellow;
-        }
         &::after {
             opacity: 1;
-            transform: scale(1);
         }
         &:hover::after {
             opacity: .6;
