--- a/src/css/scss/other/_marked-text.scss
+++ b/src/css/scss/other/_marked-text.scss
@@ -2,7 +2,7 @@
     display: inline-block;
     font-size: 24px;
     line-height: 1;
-    font-weight: bold;
+    font-weight: 900;
     background-color: $cBlue;
     padding: 10px 20px 8px;
     @include tablet {
