--- a/src/css/scss/other/_slider.scss
+++ b/src/css/scss/other/_slider.scss
@@ -1,7 +1,11 @@
 .slider {
     overflow: hidden;
-    margin: 0 0 50px;
+    margin: 0 #{-$indent} 50px;
+    padding: 0 $indent;
     @include tablet {
         margin-bottom: 100px;
+        margin-left: calc(-50vw + #{$max-width / 2});
+        margin-right: calc(-50vw + #{$max-width / 2});
+        padding: 0 calc(-50vw + #{$max-width / 2});
     }
 }
