--- a/src/css/scss/plugins/_swiper.scss
+++ b/src/css/scss/plugins/_swiper.scss
@@ -16,7 +16,7 @@
 .swiper-wrapper {
     position: relative;
     width: 100%;
-    height: 100%;
+    //height: 100%;
     z-index: 1;
     display: flex;
     transition-property: transform;
@@ -34,7 +34,7 @@
 }
 .swiper-slide {
     flex-shrink: 0;
-    width: 100%;
+    //width: 100%;
     height: 100%;
     position: relative;
     transition-property: transform;
