--- a/src/css/scss/other/_slider.scss
+++ b/src/css/scss/other/_slider.scss
@@ -2,10 +2,10 @@
     overflow: hidden;
     margin: 0 #{-$indent} 50px;
     padding: 0 $indent;
-    @include tablet {
+    @include media(1480px) {
         margin-bottom: 100px;
-        margin-left: calc(-50vw + #{$max-width / 2});
-        margin-right: calc(-50vw + #{$max-width / 2});
-        padding: 0 calc(-50vw + #{$max-width / 2});
+        margin-left: calc(calc(100vw - #{$max-width} - 20px) / -2);
+        margin-right: calc(calc(100vw - #{$max-width} - 20px) / -2);
+        padding: 0 calc(calc(100vw - #{$max-width} - 20px) / 2);
     }
 }
