--- a/src/css/scss/_mixins.scss
+++ b/src/css/scss/_mixins.scss
@@ -40,9 +40,12 @@
     padding-left: $indent;
     padding-right: $indent;
     @include tablet {
-        max-width: $max-width;
+        max-width: 80%;
         margin-left: auto;
         margin-right: auto;
+    }
+    @include media(1366px) {
+        max-width: $max-width;
     }
 
 }
