--- a/src/css/scss/other/_slider.scss
+++ b/src/css/scss/other/_slider.scss
@@ -1,11 +1,16 @@
 .slider {
     overflow: hidden;
-    margin: 0 #{-$indent} 50px;
+    margin: 0 #{-$indent} 108px;
     padding: 0 $indent;
-    @include media(1480px) {
-        margin-bottom: 100px;
-        margin-left: calc(calc(100vw - #{$max-width} - 30px) / -2);
-        margin-right: calc(calc(100vw - #{$max-width} - 30px) / -2);
-        padding: 0 calc(calc(100vw - #{$max-width} - 30px) / 2);
+    @include tablet {
+        margin-bottom: 150px;
+        margin-left: calc(calc(10% + 25px) / -1);
+        margin-right: calc(calc(10% + 25px) / -1);
+        padding: 0 calc(calc(10% + 25px));
+    }
+    @include media(1366px) {
+        margin-left: calc(calc(100vw - #{$max-width} - 20px) / -2);
+        margin-right: calc(calc(100vw - #{$max-width} - 20px) / -2);
+        padding: 0 calc(calc(100vw - #{$max-width} - 20px) / 2);
     }
 }
