--- a/src/css/scss/other/_showcase.scss
+++ b/src/css/scss/other/_showcase.scss
@@ -3,6 +3,7 @@
     position: relative;
     background-color: $bg_color;
     margin: 0 0 50px;
+    overflow: hidden;
     @include tablet {
         padding-top: 180px;
         margin-bottom: 150px;
@@ -18,6 +19,7 @@
         text-align: center;
         left: $indent;
         right: $indent;
+        z-index: 1;
         @include tablet {
             top: 180px;
             font-size: 30px;
@@ -49,8 +51,13 @@
     &_image,
     &_video {
         display: block;
-        width: 95%;
-        margin: auto;
+        width: 200%;
+        margin: -10vw auto 0;
+        transform: translateX(-25%);
+        @include tablet {
+            width: 95%;
+            margin: auto;
+        }
         @include desktop {
             margin-top: -5vw;
         }
