--- a/src/css/scss/form-elements/_button.scss
+++ b/src/css/scss/form-elements/_button.scss
@@ -6,20 +6,14 @@
     cursor: pointer;
     color: $cDark;
     font-weight: 900;
-    font-size: 14px;
-    height: 41px;
-    line-height: 41px;
-    padding: 0 15px;
+    font-size: 20px;
+    height: 74px;
+    line-height: 78px;
+    padding: 0 35px;
     text-align: center;
     white-space: nowrap;
     text-transform: uppercase;
     transition: .2s ease-in-out opacity;
-    @include tablet {
-        font-size: 20px;
-        height: 74px;
-        line-height: 74px;
-        padding: 0 35px;
-    }
 
     &:hover,
     &:focus {
@@ -30,6 +24,19 @@
     }
     &:disabled {
         opacity: .5;
+    }
+
+    .header & {
+        height: 41px;
+        line-height: 43px;
+        font-size: 14px;
+        padding: 0 15px;
+        @include tablet {
+            font-size: 20px;
+            height: 74px;
+            line-height: 74px;
+            padding: 0 35px;
+        }
     }
 }
 
