--- a/src/css/scss/layout/_logo.scss
+++ b/src/css/scss/layout/_logo.scss
@@ -1,5 +1,8 @@
 .logo {
-    width: 89px;
+    width: 59px;
+    @include media(375px) {
+        width: 89px;
+    }
     @include tablet {
         width: 133px;
     }
