--- a/src/css/scss/other/_orbis.scss
+++ b/src/css/scss/other/_orbis.scss
@@ -4,6 +4,7 @@
     margin-left: -$indent;
     margin-right: -$indent;
     margin-bottom: 50px;
+    text-transform: uppercase;
     position: relative;
     @include desktop {
         box-sizing: border-box;
@@ -33,7 +34,7 @@
         font-size: 24px;
         padding: 0 20px;
         height: 57px;
-        line-height: 57px;
+        line-height: 61px;
         background-color: $cLightBlue;
         margin: 0 0 20px;
         text-transform: uppercase;
