--- a/src/css/scss/other/_showcase.scss
+++ b/src/css/scss/other/_showcase.scss
@@ -57,6 +57,7 @@
         @include tablet {
             width: 95%;
             margin: auto;
+            transform: none;
         }
         @include desktop {
             margin-top: -5vw;
