--- a/src/css/scss/form-elements/_button.scss
+++ b/src/css/scss/form-elements/_button.scss
@@ -3,6 +3,7 @@
     background: $cYellow;
     box-sizing: border-box;
     border: none;
+    border-radius: 0;
     cursor: pointer;
     color: $cDark;
     font-weight: 900;
