--- a/src/css/scss/form-elements/_textarea.scss
+++ b/src/css/scss/form-elements/_textarea.scss
@@ -12,6 +12,7 @@ textarea {
     width: 100%;
     letter-spacing: .5px;
     height: 180px;
+    border-radius: 0;
     transition: .2s ease-in color;
     resize: none;
     transition: .2s ease-in border-color, .2s ease-in color;
