--- a/src/css/scss/basic/_default.scss
+++ b/src/css/scss/basic/_default.scss
@@ -64,7 +64,7 @@ blockquote {
     text-transform: uppercase;
     margin: 0 0 10px;
     font-weight: 900;
-    @include tablet {
+    @include desktop {
         font-size: 42px;
         line-height: 52px;
     }
@@ -75,7 +75,7 @@ figcaption {
     line-height: 20px;
     text-align: center;
     letter-spacing: 4px;
-    @include tablet {
+    @include desktop {
         font-size: 20px;
         line-height: 52px;
     }
