--- a/src/css/scss/form-elements/_form.scss
+++ b/src/css/scss/form-elements/_form.scss
@@ -8,6 +8,8 @@
         margin: 0 0 60px;
         @include tablet {
             margin-bottom: 120px;
+            margin-left: -4%;
+            width: 108%;
         }
 
         span {
