--- a/src/css/scss/form-elements/_form.scss
+++ b/src/css/scss/form-elements/_form.scss
@@ -59,4 +59,27 @@
             margin-bottom: 80px;
         }
     }
+    &_success {
+        display: none;
+    }
+
+    &.done {
+        .form_title {
+            display: none !important;
+        }
+        .form_row {
+            display: none;
+        }
+        .form_title__success {
+            display: block !important;
+        }
+        .form_success {
+            display: block;
+        }
+    }
+}
+
+#form {
+    position: relative;
+    top: -70px;
 }
