--- a/src/css/scss/other/_social.scss
+++ b/src/css/scss/other/_social.scss
@@ -14,7 +14,7 @@
         letter-spacing: 1px;
         text-transform: uppercase;
         display: block;
-        margin: 0 0 10px;
+        margin: 50px 0 10px;
     }
     &_copy-button {
         background: rgba(0, 163, 224, 0.2) url(#{$img}/copy.svg) no-repeat center right 16px;
@@ -28,5 +28,21 @@
         width: 100%;
         max-width: 512px;
         text-align: left;
+    }
+
+    .at-share-btn-elements[class] {
+        display: flex;
+        justify-content: center;
+    }
+    .at-icon-wrapper[class] {
+        height: 72px;
+        width: 72px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        &:hover {
+            transform: none;
+        }
     }
 }
