--- a/src/css/scss/form-elements/_form.scss
+++ b/src/css/scss/form-elements/_form.scss
@@ -55,8 +55,27 @@
     &_row {
         margin: 0 auto 50px;
         max-width: 572px;
+        position: relative;
         @include tablet {
             margin-bottom: 80px;
+        }
+    }
+    &_error {
+        font-size: 19px;
+        line-height: 30px;
+        text-transform: uppercase;
+        position: absolute;
+        left: 0;
+        top: -30px;
+        color: #FF5C5C;
+        display: none;
+        @include tablet {
+            font-size: 20px;
+            line-height: 20px;
+        }
+
+        .submitted input:invalid + & {
+            display: block;
         }
     }
     &_success {
