--- a/src/css/scss/other/_showcase.scss
+++ b/src/css/scss/other/_showcase.scss
@@ -1,7 +1,7 @@
 .showcase {
     padding: 120px 0 0;
     position: relative;
-    background-color: $bg_color;
+    background-color: #0C1F2F;
     margin: 0 0 50px;
     overflow: hidden;
     @include tablet {
