feat: add video section

--- a/src/css/scss/style.scss
+++ b/src/css/scss/style.scss
@@ -38,7 +38,8 @@
 @import  "other/intro";
 @import  "other/quote-wrapper";
 @import  "other/social";
-
+@import  "other/video-embed";
+@import  "other/video-section";
 
 /* plugins */
 @import  "plugins/swiper";
