--- a/src/css/scss/other/_video-embed.scss
+++ b/src/css/scss/other/_video-embed.scss
@@ -1,7 +1,8 @@
 .video-embed {
     height: 0;
-    padding-bottom: (9 / 16 * 100%);
+    padding-bottom: 100%;
     position: relative;
+    width: 100%;
 
     > * {
         position: absolute;
