--- a/src/css/scss/other/_video-section.scss
+++ b/src/css/scss/other/_video-section.scss
@@ -1,7 +1,17 @@
 .video-section {
-    margin: 50px 0;
+    display: flex;
+    justify-content: center;
+    margin: 50px -30px;
+
+    &_container {
+        width: 375px;
+    }
 
     @include tablet {
         margin: 90px 0;
+
+        &_container {
+            width: 400px;
+        }
     }
 }
