--- a/src/css/scss/other/_video-section.scss
+++ b/src/css/scss/other/_video-section.scss
@@ -4,14 +4,16 @@
     margin: 50px -30px;
 
     &_container {
-        width: 375px;
+        max-width: 500px;
+        width: 100%;
+    }
+
+    @media (min-width: 501px) {
+        margin-left: 0;
+        margin-right: 0;
     }
 
     @include tablet {
         margin: 90px 0;
-
-        &_container {
-            width: 400px;
-        }
     }
 }
