--- a/src/assets/scss/common/fonts.scss
+++ b/src/assets/scss/common/fonts.scss
@@ -18,14 +18,14 @@
 // }
 @font-face {
   font-family: 'Alright';
-  src: url('~@/assets/fonts/FontsFree-Net-aa4woff2.ttf') format('truetype');
+  src: url('/fonts/FontsFree-Net-aa4woff2.ttf') format('truetype');
 	font-weight: normal;
 	font-style: normal;
 	font-display: swap; 
 }
 @font-face {
   font-family: 'Alright';
-  src: url('~@/assets/fonts/FontsFree-Net-aa1woff2-1.ttf') format('truetype');
+  src: url('/fonts/FontsFree-Net-aa1woff2-1.ttf') format('truetype');
 	font-weight: bold;
 	font-style: normal;
 	font-display: swap; 
