--- a/src/assets/scss/common/variables.scss
+++ b/src/assets/scss/common/variables.scss
@@ -15,3 +15,5 @@ $color-sandstone: #716a5b;
 $color-sandstone-20: rgba($color-sandstone, 0.2);
 $color-sandstone-50: rgba($color-sandstone, 0.5);
 $color-white: #fff;
+
+$color-link: #EADA24;
