--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -57,12 +57,8 @@ body, * {
 }
 
 a, .link {
-  @include font($font-alright-normal); 
-  color: $cYellow;
   text-decoration: none;
-  font-size: 20px;
-  line-height: 18px;
-  font-weight: bold;
+ 
 }
 
 a:focus{
@@ -70,30 +66,30 @@ a:focus{
   opacity: .6;
 }
 
-b {
-  font-weight: 600;
-}
+// b {
+//   font-weight: 600;
+// }
 
-h1 {
-  font-size: 48px;
-  line-height: 1;
+// h1 {
+//   font-size: 48px;
+//   line-height: 1;
 
-  @include desktop {
-    font-size: 100px;
-  }
-}
+//   @include desktop {
+//     font-size: 100px;
+//   }
+// }
 
-h2 {
-  font-size: 16px;
-  letter-spacing: 1px;
-  color: #2B2B2B;
-  @include font($font-alright-normal);  
-  font-family:  sans-serif;
-  @include desktop {
-    font-size: 40px;
-    line-height: 1;
-  }
-}
+// h2 {
+//   font-size: 16px;
+//   letter-spacing: 1px;
+//   color: #2B2B2B;
+//   @include font($font-alright-normal);  
+//   font-family:  sans-serif;
+//   @include desktop {
+//     font-size: 40px;
+//     line-height: 1;
+//   }
+// }
 
 html, body, #app, .main {
   height:100%;
