--- a/src/assets/scss/form-elements/_form.scss
+++ b/src/assets/scss/form-elements/_form.scss
@@ -81,9 +81,9 @@
     }
 
     &.done {
-        .form_title {
-            display: none !important;
-        }
+        // .form_title {
+        //     display: none !important;
+        // }
         .form_row {
             display: none;
         }
