--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -48,14 +48,15 @@
 
 body, * {
   //font-family: 'Amplitude', 'Open Sans', sans-serif;
-  font-family:  sans-serif;
+  //font-family:  sans-serif;
   color: #fff;
-  line-height: 1.4;
+  //line-height: 1.4;
   font-weight: 300;
   font-size: 16px;
  
   
 }
+
 
 a, .link {
   text-decoration: none;
@@ -63,6 +64,10 @@ a, .link {
 }
 
 a:focus{
+  outline: none;
+  opacity: .6;
+}
+.router-link-exact-active {
   outline: none;
   opacity: .6;
 }
@@ -103,8 +108,11 @@ html, body, #app, .main {
 
 .ui{
   width: 100%;
-  padding: 82px 82px 30px;
+  padding: 30px;
   box-sizing: border-box;
+  @include desktop {
+    padding: 82px 82px 30px;   
+  }
 }
 
 .layout{
