--- a/src/assets/scss/common/reset.scss
+++ b/src/assets/scss/common/reset.scss
@@ -13,7 +13,7 @@ dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed,
- figcaption, footer, header, hgroup,
+ figcaption,  header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
   margin: 0;
