--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -11,6 +11,9 @@
 @mixin tablet() {
     @media all and (min-width: 768px) { @content; }
 }
+@mixin mobile() {
+    @media all and (max-width: 767px) { @content; }
+}
 @mixin desktop() {
     @media all and (min-width: 1124px) { @content; }
 }
