--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -15,8 +15,11 @@
     &_menu {
         margin: 0 0 15px;
         display: flex;
-        gap: 8px;
+        gap: 0;
         @include tablet {
+            gap: 20px;
+        }
+        @include desktop {
             gap: 30px;
         }
     }
@@ -29,7 +32,7 @@
     &_copyrights {
         font-size: 12px;
         line-height: 18px;
-        margin: 0 0 50px;
+        margin: 0 0 30px;
         @include tablet {
             margin: 0;
         }
